--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "conventional-changelog-conventionalcommits": "^5.0.0",
     "eslint": "^7.15.0",
     "gh-pages": "^3.1.0",
-    "gulp": "^4.0.2",
+    "gulp": "^3.9.1",
     "gulp-header": "^2.0.9",
-    "js-green-licenses": "^1.1.0",
+    "js-green-licenses": "^4.0.0",
     "json-to-pretty-yaml": "^1.2.2",
     "lerna": "^6.5.1",
     "rimraf": "^3.0.2"
@@ -46,5 +46,8 @@
   },
   "eslintConfig": {
     "extends": "@blockly/eslint-config"
+  },
+  "dependencies": {
+    "blockly-samples": "git+https://git@github.com/b-3d60/blockly-samples.git"
   }
 }
